# cornerstone2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Config.h  Logger.h
source/: Config.cpp  Logger.cpp
